edgevox-onnx/c-api/c-api.h


EDGEVOX_ONNX_API const char *EdgevoxOnnxGetVersionStr();
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetGitSha1();
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetGitDate();
typedef struct EdgevoxOnnxOnlineStream EdgevoxOnnxOnlineStream;
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlineStream(
    const EdgevoxOnnxOnlineStream *stream);
typedef struct EdgevoxOnnxOfflineStream EdgevoxOnnxOfflineStream;
typedef struct EdgevoxOnnxCircularBuffer EdgevoxOnnxCircularBuffer;
EDGEVOX_ONNX_API const EdgevoxOnnxCircularBuffer *EdgevoxOnnxCreateCircularBuffer(
    int32_t capacity);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyCircularBuffer(
    const EdgevoxOnnxCircularBuffer *buffer);
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferPush(
    const EdgevoxOnnxCircularBuffer *buffer, const float *p, int32_t n);
EDGEVOX_ONNX_API const float *EdgevoxOnnxCircularBufferGet(
    const EdgevoxOnnxCircularBuffer *buffer, int32_t start_index, int32_t n);
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferFree(const float *p);
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferPop(
    const EdgevoxOnnxCircularBuffer *buffer, int32_t n);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxCircularBufferSize(const EdgevoxOnnxCircularBuffer *buffer);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxCircularBufferHead(const EdgevoxOnnxCircularBuffer *buffer);
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferReset(
    const EdgevoxOnnxCircularBuffer *buffer);
typedef struct EdgevoxOnnxSpeechSegment {
  int32_t start;
  float *samples;
  int32_t n;
} EdgevoxOnnxSpeechSegment;
typedef struct EdgevoxOnnxVoiceActivityDetector EdgevoxOnnxVoiceActivityDetector;
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorPop(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorClear(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API const EdgevoxOnnxSpeechSegment *
EdgevoxOnnxVoiceActivityDetectorFront(const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeechSegment(
    const EdgevoxOnnxSpeechSegment *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorReset(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorFlush(
    const EdgevoxOnnxVoiceActivityDetector *p);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxWriteWave(const float *samples, int32_t n,
                                            int32_t sample_rate,
                                            const char *filename);
typedef struct EdgevoxOnnxWave {
  const float *samples;
  int32_t sample_rate;
  int32_t num_samples;
} EdgevoxOnnxWave;
EDGEVOX_ONNX_API const EdgevoxOnnxWave *EdgevoxOnnxReadWave(const char *filename);
EDGEVOX_ONNX_API void EdgevoxOnnxFreeWave(const EdgevoxOnnxWave *wave);
typedef struct EdgevoxOnnxSpokenLanguageIdentificationConfig {
  EdgevoxOnnxSpokenLanguageIdentificationWhisperConfig whisper;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxSpokenLanguageIdentificationConfig;
typedef struct EdgevoxOnnxSpokenLanguageIdentification
    EdgevoxOnnxSpokenLanguageIdentification;
EDGEVOX_ONNX_API const EdgevoxOnnxSpokenLanguageIdentification *
EdgevoxOnnxCreateSpokenLanguageIdentification(
    const EdgevoxOnnxSpokenLanguageIdentificationConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpokenLanguageIdentification(
    const EdgevoxOnnxSpokenLanguageIdentification *slid);
EDGEVOX_ONNX_API EdgevoxOnnxOfflineStream *
EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream(
    const EdgevoxOnnxSpokenLanguageIdentification *slid);
typedef struct EdgevoxOnnxSpokenLanguageIdentificationResult {
  const char *lang;
} EdgevoxOnnxSpokenLanguageIdentificationResult;
EDGEVOX_ONNX_API const EdgevoxOnnxSpokenLanguageIdentificationResult *
EdgevoxOnnxSpokenLanguageIdentificationCompute(
    const EdgevoxOnnxSpokenLanguageIdentification *slid,
    const EdgevoxOnnxOfflineStream *s);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpokenLanguageIdentificationResult(
    const EdgevoxOnnxSpokenLanguageIdentificationResult *r);
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractorConfig {
  const char *model;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxSpeakerEmbeddingExtractorConfig;
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractor
    EdgevoxOnnxSpeakerEmbeddingExtractor;
EDGEVOX_ONNX_API const EdgevoxOnnxSpeakerEmbeddingExtractor *
EdgevoxOnnxCreateSpeakerEmbeddingExtractor(
    const EdgevoxOnnxSpeakerEmbeddingExtractorConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeakerEmbeddingExtractor(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingExtractorDim(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *
EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingExtractorIsReady(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p,
    const EdgevoxOnnxOnlineStream *s);
EDGEVOX_ONNX_API const float *
EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p,
    const EdgevoxOnnxOnlineStream *s);
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding(
    const float *v);
typedef struct EdgevoxOnnxSpeakerEmbeddingManager
    EdgevoxOnnxSpeakerEmbeddingManager;
EDGEVOX_ONNX_API const EdgevoxOnnxSpeakerEmbeddingManager *
EdgevoxOnnxCreateSpeakerEmbeddingManager(int32_t dim);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeakerEmbeddingManager(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxSpeakerEmbeddingManagerAdd(const EdgevoxOnnxSpeakerEmbeddingManager *p,
                                     const char *name, const float *v);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerAddListFlattened(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, int32_t n);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerRemove(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name);
EDGEVOX_ONNX_API const char *EdgevoxOnnxSpeakerEmbeddingManagerSearch(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const float *v,
    float threshold);
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingManagerFreeSearch(
    const char *name);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerVerify(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, float threshold);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerContains(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerNumSpeakers(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
EDGEVOX_ONNX_API const char *const *
EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakers(
    const char *const *names);
typedef struct EdgevoxOnnxOfflinePunctuationConfig {
  EdgevoxOnnxOfflinePunctuationModelConfig model;
} EdgevoxOnnxOfflinePunctuationConfig;
typedef struct EdgevoxOnnxOfflinePunctuation EdgevoxOnnxOfflinePunctuation;
EDGEVOX_ONNX_API const EdgevoxOnnxOfflinePunctuation *
EdgevoxOnnxCreateOfflinePunctuation(
    const EdgevoxOnnxOfflinePunctuationConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflinePunctuation(
    const EdgevoxOnnxOfflinePunctuation *punct);
EDGEVOX_ONNX_API const char *SherpaOfflinePunctuationAddPunct(
    const EdgevoxOnnxOfflinePunctuation *punct, const char *text);
EDGEVOX_ONNX_API void SherpaOfflinePunctuationFreeText(const char *text);
typedef struct EdgevoxOnnxOnlinePunctuationConfig {
  EdgevoxOnnxOnlinePunctuationModelConfig model;
} EdgevoxOnnxOnlinePunctuationConfig;
typedef struct EdgevoxOnnxOnlinePunctuation EdgevoxOnnxOnlinePunctuation;
EDGEVOX_ONNX_API const EdgevoxOnnxOnlinePunctuation *
EdgevoxOnnxCreateOnlinePunctuation(
    const EdgevoxOnnxOnlinePunctuationConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlinePunctuation(
    const EdgevoxOnnxOnlinePunctuation *punctuation);
EDGEVOX_ONNX_API const char *EdgevoxOnnxOnlinePunctuationAddPunct(
    const EdgevoxOnnxOnlinePunctuation *punctuation, const char *text);
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationConfig {
  EdgevoxOnnxOfflineSpeakerSegmentationModelConfig segmentation;
  EdgevoxOnnxSpeakerEmbeddingExtractorConfig embedding;
  EdgevoxOnnxFastClusteringConfig clustering;
  float min_duration_on;
  float min_duration_off;
} EdgevoxOnnxOfflineSpeakerDiarizationConfig;
typedef struct EdgevoxOnnxOfflineSpeakerDiarization
    EdgevoxOnnxOfflineSpeakerDiarization;
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeakerDiarization *
EdgevoxOnnxCreateOfflineSpeakerDiarization(
    const EdgevoxOnnxOfflineSpeakerDiarizationConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineSpeakerDiarization(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeakerDiarizationGetSampleRate(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd);
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineSpeakerDiarizationSetConfig(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd,
    const EdgevoxOnnxOfflineSpeakerDiarizationConfig *config);
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationResult
    EdgevoxOnnxOfflineSpeakerDiarizationResult;
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationSegment {
  float start;
  float end;
  int32_t speaker;
} EdgevoxOnnxOfflineSpeakerDiarizationSegment;
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSpeakers(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSegments(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeakerDiarizationSegment *
EdgevoxOnnxOfflineSpeakerDiarizationResultSortByStartTime(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineSpeakerDiarizationDestroySegment(
    const EdgevoxOnnxOfflineSpeakerDiarizationSegment *s);
typedef int32_t (*EdgevoxOnnxOfflineSpeakerDiarizationProgressCallbackNoArg)(
    int32_t num_processed_chunks, int32_t num_total_chunks);
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeakerDiarizationResult *
EdgevoxOnnxOfflineSpeakerDiarizationProcess(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd, const float *samples,
    int32_t n);
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeakerDiarizationResult *
EdgevoxOnnxOfflineSpeakerDiarizationProcessWithCallbackNoArg(
    const EdgevoxOnnxOfflineSpeakerDiarization *sd, const float *samples,
    int32_t n,
    EdgevoxOnnxOfflineSpeakerDiarizationProgressCallbackNoArg callback);
EDGEVOX_ONNX_API void EdgevoxOnnxOfflineSpeakerDiarizationDestroyResult(
    const EdgevoxOnnxOfflineSpeakerDiarizationResult *r);
typedef struct EdgevoxOnnxOfflineSpeechDenoiserConfig {
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOfflineSpeechDenoiserConfig;
typedef struct EdgevoxOnnxOfflineSpeechDenoiser EdgevoxOnnxOfflineSpeechDenoiser;
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeechDenoiser *
EdgevoxOnnxCreateOfflineSpeechDenoiser(
    const EdgevoxOnnxOfflineSpeechDenoiserConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineSpeechDenoiser(
    const EdgevoxOnnxOfflineSpeechDenoiser *sd);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeechDenoiserGetSampleRate(
    const EdgevoxOnnxOfflineSpeechDenoiser *sd);
typedef struct EdgevoxOnnxDenoisedAudio {
  const float *samples;
  int32_t n;
  int32_t sample_rate;
} EdgevoxOnnxDenoisedAudio;
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOfflineSpeechDenoiserRun(const EdgevoxOnnxOfflineSpeechDenoiser *sd,
                                   const float *samples, int32_t n,
                                   int32_t sample_rate);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyDenoisedAudio(
    const EdgevoxOnnxDenoisedAudio *p);
typedef struct EdgevoxOnnxOnlineSpeechDenoiserConfig {
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOnlineSpeechDenoiserConfig;
typedef struct EdgevoxOnnxOnlineSpeechDenoiser EdgevoxOnnxOnlineSpeechDenoiser;
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineSpeechDenoiser *
EdgevoxOnnxCreateOnlineSpeechDenoiser(
    const EdgevoxOnnxOnlineSpeechDenoiserConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlineSpeechDenoiser(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOnlineSpeechDenoiserGetSampleRate(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamples(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOnlineSpeechDenoiserRun(const EdgevoxOnnxOnlineSpeechDenoiser *sd,
                                  const float *samples, int32_t n,
                                  int32_t sample_rate);
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOnlineSpeechDenoiserFlush(const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API void EdgevoxOnnxOnlineSpeechDenoiserReset(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);