flutter/edgevox_onnx/lib/src/edgevox_onnx_bindings.dart


  static EdgevoxOnnxVoiceActivityDetectorPop? voiceActivityDetectorPop;

  static EdgevoxOnnxVoiceActivityDetectorClear? voiceActivityDetectorClear;

  static EdgevoxOnnxVoiceActivityDetectorFront? voiceActivityDetectorFront;

  static EdgevoxOnnxDestroySpeechSegment? destroySpeechSegment;

  static EdgevoxOnnxVoiceActivityDetectorReset? voiceActivityDetectorReset;

  static EdgevoxOnnxVoiceActivityDetectorFlush? voiceActivityDetectorFlush;

  static EdgevoxOnnxCreateCircularBuffer? createCircularBuffer;

  static EdgevoxOnnxDestroyCircularBuffer? destroyCircularBuffer;

  static EdgevoxOnnxCircularBufferPush? circularBufferPush;

  static EdgevoxOnnxCircularBufferGet? circularBufferGet;

  static EdgevoxOnnxCircularBufferFree? circularBufferFree;

  static EdgevoxOnnxCircularBufferPop? circularBufferPop;

  static EdgevoxOnnxCircularBufferSize? circularBufferSize;

  static EdgevoxOnnxCircularBufferHead? circularBufferHead;

  static EdgevoxOnnxCircularBufferReset? circularBufferReset;

  static EdgevoxOnnxCreateSpeakerEmbeddingExtractor?
  createSpeakerEmbeddingExtractor;

  static EdgevoxOnnxDestroySpeakerEmbeddingExtractor?
  destroySpeakerEmbeddingExtractor;

  static EdgevoxOnnxSpeakerEmbeddingExtractorDim? speakerEmbeddingExtractorDim;

  static EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream?
  speakerEmbeddingExtractorCreateStream;

  static EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding?
  speakerEmbeddingExtractorComputeEmbedding;

  static EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding?
  speakerEmbeddingExtractorDestroyEmbedding;

  static EdgevoxOnnxDestroyOnlineStream? destroyOnlineStream;

  static OnlineStreamAcceptWaveform? onlineStreamAcceptWaveform;

  static OnlineStreamInputFinished? onlineStreamInputFinished;

  static OnlineStreamSetOption? onlineStreamSetOption;

  static EdgevoxOnnxSpeakerEmbeddingExtractorIsReady?
  speakerEmbeddingExtractorIsReady;

  static EdgevoxOnnxCreateSpeakerEmbeddingManager? createSpeakerEmbeddingManager;

  static EdgevoxOnnxDestroySpeakerEmbeddingManager?
  destroySpeakerEmbeddingManager;

  static EdgevoxOnnxSpeakerEmbeddingManagerAdd? speakerEmbeddingManagerAdd;

  static EdgevoxOnnxSpeakerEmbeddingManagerAddListFlattened?
  speakerEmbeddingManagerAddListFlattened;

  static EdgevoxOnnxSpeakerEmbeddingManagerRemove? speakerEmbeddingManagerRemove;

  static EdgevoxOnnxSpeakerEmbeddingManagerContains?
  speakerEmbeddingManagerContains;

  static EdgevoxOnnxSpeakerEmbeddingManagerSearch? speakerEmbeddingManagerSearch;

  static EdgevoxOnnxSpeakerEmbeddingManagerFreeSearch?
  speakerEmbeddingManagerFreeSearch;

  static EdgevoxOnnxSpeakerEmbeddingManagerNumSpeakers?
  speakerEmbeddingManagerNumSpeakers;

  static EdgevoxOnnxSpeakerEmbeddingManagerVerify? speakerEmbeddingManagerVerify;

  static EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers?
  speakerEmbeddingManagerGetAllSpeakers;

  static EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakers?
  speakerEmbeddingManagerFreeAllSpeakers;

  static EdgevoxOnnxReadWave? readWave;

  static EdgevoxOnnxWriteWave? writeWave;

  static EdgevoxOnnxFreeWave? freeWave;

  static EdgevoxOnnxGetVersionStr? getVersionStr;
  static EdgevoxOnnxGetGitSha1? getGitSha1;
  static EdgevoxOnnxGetGitDate? getGitDate;

  static void init(DynamicLibrary dynamicLibrary) {
    edgevoxOnnxCreateOfflineSpeechDenoiser ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOfflineSpeechDenoiserNative>>(
          'EdgevoxOnnxCreateOfflineSpeechDenoiser',
        )
        .asFunction();

    edgevoxOnnxDestroyOfflineSpeechDenoiser ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyOfflineSpeechDenoiserNative>>(
          'EdgevoxOnnxDestroyOfflineSpeechDenoiser',
        )
        .asFunction();

    edgevoxOnnxOfflineSpeechDenoiserGetSampleRate ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxOfflineSpeechDenoiserGetSampleRateNative>
        >('EdgevoxOnnxOfflineSpeechDenoiserGetSampleRate')
        .asFunction();

    edgevoxOnnxOfflineSpeechDenoiserRun ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOfflineSpeechDenoiserRunNative>>(
          'EdgevoxOnnxOfflineSpeechDenoiserRun',
        )
        .asFunction();

    edgevoxOnnxDestroyDenoisedAudio ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyDenoisedAudioNative>>(
          'EdgevoxOnnxDestroyDenoisedAudio',
        )
        .asFunction();

    edgevoxOnnxCreateOnlineSpeechDenoiser ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOnlineSpeechDenoiserNative>>(
          'EdgevoxOnnxCreateOnlineSpeechDenoiser',
        )
        .asFunction();

    edgevoxOnnxDestroyOnlineSpeechDenoiser ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyOnlineSpeechDenoiserNative>>(
          'EdgevoxOnnxDestroyOnlineSpeechDenoiser',
        )
        .asFunction();

    edgevoxOnnxOnlineSpeechDenoiserGetSampleRate ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxOnlineSpeechDenoiserGetSampleRateNative>
        >('EdgevoxOnnxOnlineSpeechDenoiserGetSampleRate')
        .asFunction();

    edgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamples ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamplesNative
          >
        >('EdgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamples')
        .asFunction();

    edgevoxOnnxOnlineSpeechDenoiserRun ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOnlineSpeechDenoiserRunNative>>(
          'EdgevoxOnnxOnlineSpeechDenoiserRun',
        )
        .asFunction();

    edgevoxOnnxOnlineSpeechDenoiserFlush ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOnlineSpeechDenoiserFlushNative>>(
          'EdgevoxOnnxOnlineSpeechDenoiserFlush',
        )
        .asFunction();

    edgevoxOnnxOnlineSpeechDenoiserReset ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOnlineSpeechDenoiserResetNative>>(
          'EdgevoxOnnxOnlineSpeechDenoiserReset',
        )
        .asFunction();

    edgevoxOnnxCreateSpokenLanguageIdentification ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxCreateSpokenLanguageIdentificationNative>
        >('EdgevoxOnnxCreateSpokenLanguageIdentification')
        .asFunction();

    edgevoxOnnxDestroySpokenLanguageIdentification ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxDestroySpokenLanguageIdentificationNative>
        >('EdgevoxOnnxDestroySpokenLanguageIdentification')
        .asFunction();

    edgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStreamNative
          >
        >('EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream')
        .asFunction();

    edgevoxOnnxSpokenLanguageIdentificationCompute ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpokenLanguageIdentificationComputeNative>
        >('EdgevoxOnnxSpokenLanguageIdentificationCompute')
        .asFunction();

    edgevoxOnnxDestroySpokenLanguageIdentificationResult ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxDestroySpokenLanguageIdentificationResultNative
          >
        >('EdgevoxOnnxDestroySpokenLanguageIdentificationResult')
        .asFunction();

    edgevoxOnnxCreateOfflineSpeakerDiarization ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxCreateOfflineSpeakerDiarizationNative>
        >('EdgevoxOnnxCreateOfflineSpeakerDiarization')
        .asFunction();

    edgevoxOnnxDestroyOfflineSpeakerDiarization ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxDestroyOfflineSpeakerDiarizationNative>
        >('EdgevoxOnnxDestroyOfflineSpeakerDiarization')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationGetSampleRate ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxOfflineSpeakerDiarizationGetSampleRateNative>
        >('EdgevoxOnnxOfflineSpeakerDiarizationGetSampleRate')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationSetConfig ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxOfflineSpeakerDiarizationSetConfigNative>
        >('EdgevoxOnnxOfflineSpeakerDiarizationSetConfig')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationResultGetNumSpeakers ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSpeakersNative
          >
        >('EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSpeakers')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationResultGetNumSegments ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSegmentsNative
          >
        >('EdgevoxOnnxOfflineSpeakerDiarizationResultGetNumSegments')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationResultSortByStartTime ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxOfflineSpeakerDiarizationResultSortByStartTimeNative
          >
        >('EdgevoxOnnxOfflineSpeakerDiarizationResultSortByStartTime')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationDestroySegment ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxOfflineSpeakerDiarizationDestroySegmentNative
          >
        >('EdgevoxOnnxOfflineSpeakerDiarizationDestroySegment')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationProcess ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxOfflineSpeakerDiarizationProcessNative>
        >('EdgevoxOnnxOfflineSpeakerDiarizationProcess')
        .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationProcessWithCallbackNoArg ??=
        dynamicLibrary
            .lookup<
              NativeFunction<
                EdgevoxOnnxOfflineSpeakerDiarizationProcessWithCallbackNoArgNative
              >
            >('EdgevoxOnnxOfflineSpeakerDiarizationProcessWithCallbackNoArg')
            .asFunction();

    edgevoxOnnxOfflineSpeakerDiarizationDestroyResult ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxOfflineSpeakerDiarizationDestroyResultNative>
        >('EdgevoxOnnxOfflineSpeakerDiarizationDestroyResult')
        .asFunction();

    edgevoxOnnxCreateOfflinePunctuation ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOfflinePunctuationNative>>(
          'EdgevoxOnnxCreateOfflinePunctuation',
        )
        .asFunction();

    edgevoxOnnxDestroyOfflinePunctuation ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyOfflinePunctuationNative>>(
          'EdgevoxOnnxDestroyOfflinePunctuation',
        )
        .asFunction();

    sherpaOfflinePunctuationAddPunct ??= dynamicLibrary
        .lookup<NativeFunction<SherpaOfflinePunctuationAddPunctNative>>(
          'SherpaOfflinePunctuationAddPunct',
        )
        .asFunction();

    sherpaOfflinePunctuationFreeText ??= dynamicLibrary
        .lookup<NativeFunction<SherpaOfflinePunctuationFreeTextNative>>(
          'SherpaOfflinePunctuationFreeText',
        )
        .asFunction();

    edgevoxOnnxCreateOnlinePunctuation ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateOnlinePunctuationNative>>(
          'EdgevoxOnnxCreateOnlinePunctuation',
        )
        .asFunction();

    edgevoxOnnxDestroyOnlinePunctuation ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyOnlinePunctuationNative>>(
          'EdgevoxOnnxDestroyOnlinePunctuation',
        )
        .asFunction();

    edgevoxOnnxOnlinePunctuationAddPunct ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxOnlinePunctuationAddPunctNative>>(
          'EdgevoxOnnxOnlinePunctuationAddPunct',
        )
        .asFunction();
